[package]
name = "reporteer"
version = "0.1.0"
edition = "2021"
authors = ["Lele <emanuele.lele.calo@gmail.com"]
description = "A service for fetching and exposing derived keys from TEE platforms"
license = "MIT"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.33", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
url = { version = "2", features = ["serde"] }
sail-sdk = "=0.1.4"

# Cryptography
sha2 = "0.10"
anyhow = "1.0.95"

[dev-dependencies]
tokio-test = "0.4"
